feat: complete quiz customization, review mode, real-time analytics, and secure deployment configurations